feat: add filter news by status and topic
