# docs/swagger.json
@@ -32,13 +32,28 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.SuccessWithMessageResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/common.NewsResource"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
             },
             "post": {
-                "description": "Create a new News with the provided information",
+                "description": "Create News with the provided information",
                 "consumes": [
                     "application/json"
                 ],
@@ -50,13 +65,12 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Create News",
-                        "name": "product",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.CreateNewsRequest"
-                        }
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "News ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -65,13 +79,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.SuccessWithMessageResponse"
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/resource.NewsResource"
+                                            "$ref": "#/definitions/common.NewsResource"
                                         }
                                     }
                                 }
@@ -82,8 +96,40 @@
             }
         },
         "/news/{id}": {
+            "get": {
+                "description": "Detail News with the provided information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/common.NewsResource"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
             "put": {
-                "description": "Update an existing News with the provided information",
+                "description": "Update existing News with the provided information",
                 "consumes": [
                     "application/json"
                 ],
@@ -118,13 +164,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.SuccessWithMessageResponse"
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/resource.NewsResource"
+                                            "$ref": "#/definitions/common.NewsResource"
                                         }
                                     }
                                 }
@@ -134,7 +180,7 @@
                 }
             },
             "delete": {
-                "description": "Delete a News with the provided News ID",
+                "description": "Delete News with the provided News ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -160,13 +206,47 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.SuccessWithMessageResponse"
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/resource.NewsResource"
+                                            "$ref": "#/definitions/common.NewsResource"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/topic/{id}": {
+            "get": {
+                "description": "Detail Topic with the provided information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/common.TopicResource"
                                         }
                                     }
                                 }
@@ -177,26 +257,6 @@
             }
         },
         "/topics": {
-            "get": {
-                "description": "Retrieve all Topics",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Topics"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.SuccessWithMessageResponse"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Create a new Topic with the provided information",
                 "consumes": [
@@ -225,13 +285,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.SuccessWithMessageResponse"
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/resource.TopicResource"
+                                            "$ref": "#/definitions/common.TopicResource"
                                         }
                                     }
                                 }
@@ -278,13 +338,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.SuccessWithMessageResponse"
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/resource.TopicResource"
+                                            "$ref": "#/definitions/common.TopicResource"
                                         }
                                     }
                                 }
@@ -320,13 +380,50 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.SuccessWithMessageResponse"
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/resource.TopicResource"
+                                            "$ref": "#/definitions/common.TopicResource"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/api/topics": {
+            "get": {
+                "description": "List all topics with related topic",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Topics"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/common.TopicResource"
+                                            }
                                         }
                                     }
                                 }
@@ -338,32 +435,64 @@
         }
     },
     "definitions": {
-        "request.CreateNewsRequest": {
+        "common.NewsResource": {
             "type": "object",
-            "required": [
-                "content",
-                "status",
-                "title"
-            ],
             "properties": {
                 "content": {
                     "type": "string"
                 },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
                 "status": {
-                    "type": "string",
-                    "enum": [
-                        "draft",
-                        "published"
-                    ]
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
                 },
-                "topic_ids": {
+                "topics": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/common.TopicResource"
                     }
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "common.SuccessWithMessageResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "common.TopicResource": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "news": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/common.NewsResource"
+                    }
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
@@ -408,55 +537,6 @@
                 "name": {
                     "type": "string",
                     "minLength": 3
-                }
-            }
-        },
-        "resource.NewsResource": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "resource.TopicResource": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.SuccessWithMessageResponse": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "message": {
-                    "type": "string"
                 }
             }
         }
